styles/_overlay.scss
.sim-overlay {
  z-index: 2;
  position: absolute;
  will-change: transform;

  width: 100vw;
  height: 100vh;

  top: 0;
  left: 0;

  display: flex;
  flex-direction: column;

  // default
  transform: translateY(var(--overlay-parallax-start, -100%));
  &.active {
    transform: translateY(var(--overlay-parallax-end, 0%));
    .sim-overlay__dismiss {
      transform: translate(-50%, 50%) scale(1)
    }
  }
  &--content {
    overflow: auto;
  }
  &__dismiss {
    line-height: 0;
    white-space: nowrap;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: all var(--ms, var(--default-ms)) ease-out;
    transition-delay: calc(var(--ms, var(--default-ms)) / 2);
    transform: translate(-50%, 50%) scale(0);
  }
}

// opinions
.sim-overlay {
  color: var(--overlay-fg, var(--dark));
  background: var(--overlay-bg, var(--lightest));
  max-width: var(--overlay-width, 100vw);
  margin: var(--overlay-margin, 0 auto);

  // overlay parts
  &__dismiss {
    position: absolute;
    top: 0;
    right: 0;
    padding: 0;
    font-family: monospace;
    font-size: 3em;
    font-weight: 100;
    cursor: pointer;
    width: 1em;
    height: 1em;
    color: var(--overlay-x-fg, var(--lightest));
    background: var(--overlay-x-bg, var(--accent));
    border-radius: .5em;
    text-decoration: none;
    &:hover {
      text-decoration: none;
      color: var(--overlay-x-fg-hover, var(--lightest));
      background: var(--overlay-x-bg-hover, var(--action));
    }
  }
  &.active .sim-overlay__dismiss {
    transition-delay: 0ms;
    transition-duration: calc(var(--ms, var(--default-ms)) / 2);
    &:hover {
      transform: translate(-50%, 50%) scale(1);
    }
    &:active {
      transform: translate(-50%, 50%) scale(.9);
    }
  }
}

// assignment manager overlay
.assignment-manager {

  .sim-overlay .fa-plus:before {
    font-size: 1rem;
  }
}

